# multithreaded-alltoall

./: .clang-format  .clangd  CMakeLists.txt  benchmark.cpp  benchmark_check.hpp  benchmark_common.hpp  benchmark_multithreaded.cpp  benchmark_singlethreaded.cpp  default_init_allocator.hpp  reporting.cpp  reporting.hpp
eval/: plot_scaling.py
experiments/: alltoallv-funneled.suite.yaml  alltoallv-multithreaded.suite.yaml  alltoallv-singlethreaded.suite.yaml
